2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/glxProxy/glxcmds.c:
	Fix a server crash due to memsetting beyond allocated memory 
	when running GL applications. (Alan Hourihane, backported from 
	head)

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* fb/fbmmx.c:
	Bug #6346: Build fix when using gcc -mno-sse. (Jonathan 
	Adamczewski)

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/glxProxy/glxcmds.c:
	Coverity #38: Dead branch elimination.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* Xext/sync.c:
	Coverity #75: Dead variable elimination.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* os/xdmauth.c:
	Coverity #82: Dead variable elimination.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* GL/glx/glxcmdsswap.c:
	Coverity #271: Fix an unbelievably boneheaded NULL chase.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* hw/xnest/Pixmap.c:
	Coverity #616: Fix a rare memory leak.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* os/xdmauth.c:
	Coverity #833: Fix a rather nasty memory leak.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/dri/dri.c:
	Coverity #983: Move some risky debugging code inside #ifdef 
	DEBUG.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* GL/glx/glxcmds.c:
	Coverity #986: Prevent a NULL chase.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* Xext/sync.c:
	Coverity #992: Prevent a NULL chase.

2006-04-02  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxdri.c (__glXDRIscreenProbe): Use xf86LoaderCheckSymbol
	to check for DRI symbols instead of dlsym, avoiding RTLD_DEFAULT.
	(__glXDRIscreenProbe): Change GLX-DRI to AIGLX in LogMessage for
	consitency.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* hw/kdrive/ati/Makefile.am:
	* hw/kdrive/ati/ati.h:
	Disable building DRI support in Xati for now.

2006-04-01  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Disable Xprint freetype support momentarily.  Needs ttf2pt1.c, which